--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"合集：学习C++",
+    "subTitle":"你好，有缘人",
+    "avatarUrl":"http://q1.qlogo.cn/g?b=qq&nk=2092103728&s=160",
     "GMEEK_VERSION":"last"
 }
